# opencl-1bit-matmul

./: .clang-format  .gitignore  README.md  generateTest.cpp  generate_tests.sh  meson.build  meson_options.txt  openclMatmul.cpp  run_tests.sh
include/: check.hpp  groundTruth.hpp  matrixGenerator.hpp  matrixIO.hpp  pack.hpp  print.hpp
kernels/: matmul.cl
